<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_icon"
            android:title="@string/exit" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
    </group>

</menu>
