<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_15dp"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edt_usename"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/comment_box"
        android:drawableLeft="@drawable/user_sicon"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/comment_box"
        android:drawableLeft="@drawable/password_sicon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="5"
        android:paddingLeft="10dp"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edt_pet_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/comment_box"
        android:drawableLeft="@drawable/nick_name"
        android:drawablePadding="10dp"
        android:hint="@string/nknm"
        android:paddingLeft="10dp"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/signup_rbr1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/signup_rbr2" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/comment_box"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>