<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/comment_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/warning" />

            <TextView
                android:id="@+id/tvDiaMobNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifying_warning1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifying_warning2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifying_warning3"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifying_warning4"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnCancelClear"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/comment_box"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClearRecords"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/comment_box"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"  />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>