<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:letterSpacing="0.05"
            android:text="@string/copyright_warning1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:letterSpacing="0.05"
            android:text="@string/copyright_warning8"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning2"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning3"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning4"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_10dp"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning5"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_5dp"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning6"
                android:textColor="@color/text_color"
                android:textSize="17sp" />


           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_10dp"
                android:letterSpacing="0.05"
                android:text="@string/copyright_warning7"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />-->

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/text_size_20sp"
                android:background="@drawable/comment_box"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/str_continue"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>